<resources>
    <string name="app_name">Green_Garden_G3</string>
    <string name="Titulo">Bienvenido</string>
    <string name="Titulo_registrarse">Registrarse</string>
    <string name="titulo_menu">Menú</string>
    <string name="img_consumo">Consumo</string>
    <string name="img1_estadistica">Estadistica</string>
    <string name="img2_consejo">Consejos</string>
    <string name="logo">Logotipo</string>
    <string name="btn_inicio">Iniciar sesión</string>
    <string name="btn_cerrar">Cerrar sesión</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_regresar">Regresar</string>
    <string name="btn_registrarse">Crear cuenta</string>
    <string name="ETusuario">Introduce tu usuario</string>
    <string name="ETcontrasena">Introduce tu contraseña</string>
    <string name="ETcontrasena2">Confirma tu contraseña</string>
    <string name="TVinicio">¿Ya tienes cuenta?</string>
    <string name="TViniciar">Iniciar sesión</string>
    <string name="TVcuenta">¿No tienes cuenta?</string>
    <string name="TVregistrate">Crear cuenta</string>
    <string name="TVrecuperar">Recuperar Contraseña</string>
    <string name="TV_estadistica">Estadística</string>
    <string name="TV_consumo">Consumo</string>
    <string name="TV_consejos">Consejos</string>
    <string name="title_activity_recuperar">Recuperar</string>
    <string name="ETnombre">Introduce tu nombre</string>
    <string name="ETapellidos">Introduce tus apellidos</string>
    <string name="ETfecha">Introduce la fecha</string>
    <string name="ETcorreo">Introduce tu correo</string>
    <string name="ETtelefono">Introduce tu telefono</string>
    <string name="ETcontraseña">Introduce tu contraseña</string>
    <string name="ET_planta">Elige una planta</string>
    <string name="ET_categoria">Elige una categoria</string>
    <string name="ET_cantidad">Cantidad de consumo</string>
</resources>