<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="15dp"
    tools:context=".Consumo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/TV_consumo"
            android:textColor="#3F630D"
            android:textSize="34sp"
            tools:ignore="TextSizeCheck"/>

        <ImageView
            android:id="@+id/img_consumo"
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:src="@drawable/categoria"
            android:contentDescription="@string/img_consumo"/>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/planta"
        app:boxStrokeColor="#3F630D"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/ET_planta"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:hint="@string/ET_planta"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColorHint="@color/white"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/lista"
        app:boxStrokeColor="#3F630D"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/ET_categoria"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:hint="@string/ET_categoria"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColorHint="@color/white"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/cantidad"
        app:boxStrokeColor="#3F630D"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/ET_cantidad"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:hint="@string/ET_cantidad"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textColorHint="@color/white"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/calendar"
        app:boxStrokeColor="#3F630D"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/ET_fecha"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:hint="@string/ETfecha"
            android:importantForAutofill="no"
            android:inputType="date"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_guardar"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/btn_guardar"
        android:textSize="22sp"
        android:textColor="#3F630D"
        android:backgroundTint="#E8AA0B"/>

    <Button
        android:id="@+id/btn_menu"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/btn_regresar"
        android:textSize="22sp"
        android:textColor="#3F630D"
        android:backgroundTint="#E8AA0B"/>



</LinearLayout>