<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="15dp"
    tools:context=".RegistrarUsuario">

    <ImageView
        android:id="@+id/logo2"
        android:layout_width="231dp"
        android:layout_height="168dp"
        android:layout_gravity="center"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logotipo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Titulo_registrarse"
        android:textSize="35sp"
        android:textAlignment="center"
        android:textColor="#3F630D" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/icon_person"
        app:boxStrokeColor="#3F630D"
        app:endIconMode="clear_text"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/et_nombre"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/ETnombre"
            android:inputType="textPersonName"
            tools:ignore="TextContrastCheck"
           />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/icon_person"
        app:boxStrokeColor="#3F630D"
        app:endIconMode="clear_text"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/et_apellidos"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/ETapellidos"
            android:inputType="textPersonName"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/email"
        app:boxStrokeColor="#3F630D"
        app:endIconMode="clear_text"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/et_correo"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/ETcorreo"
            android:inputType="textEmailAddress"
            tools:ignore="TextContrastCheck"
           />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/lock"
        app:boxStrokeColor="#3F630D"
        app:endIconMode="password_toggle"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/ETcontraseña"
            android:inputType="textPassword"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/lock"
        app:boxStrokeColor="#3F630D"
        app:endIconMode="password_toggle"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/et_password1"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/ETcontrasena2"
            android:inputType="textPassword"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_registrarse"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_registrarse"
        android:textSize="22sp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textColor="#3F630D"
        android:backgroundTint="#E8AA0B" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp">
                <TextView
                    android:id="@+id/tv_registrarse1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/TVinicio"/>
                <TextView
                    android:id="@+id/tv_iniciar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:textSize="16sp"
                    android:textColor="#3F630D"
                    android:text="@string/TViniciar"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>